--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>TodoMVC</title>
-		<meta name="description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
+		<title>TodoFlux</title>
+		<meta name="description" content="Helping you select a FLux implementation - Todo apps for Flux, React, Redux, Fluxxor, Flummox and more">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:title" content="TodoMVC">
-		<meta name="twitter:site" content="@TasteJS">
+		<meta name="twitter:title" content="TodoFlux">
+		<meta name="twitter:site" content="@todoflux">
 		<meta name="twitter:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS and many more">
 		<meta name="twitter:image" content="https://raw.githubusercontent.com/tastejs/todomvc/gh-pages/site-assets/screenshot.png">
-		<meta property="og:url" content="http://todomvc.com">
-		<meta property="og:title" content="TodoMVC">
+		<meta property="og:url" content="http://todoflux.com">
+		<meta property="og:title" content="TodoFlux">
 		<meta property="og:image" content="https://raw.github.com/tastejs/todomvc/gh-pages/site-assets/screenshot.png">
 		<meta property="og:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
 		<link rel="shortcut icon" href="site-assets/favicon.ico">
@@ -30,11 +30,10 @@
 			<header class="row">
 				<div class="col-md-8">
 					<img class="logo" src="site-assets/logo.svg" width="500" height="86" alt="TodoMVC">
-					<p>Helping you <strong>select</strong> an MV* framework</p>
+					<p>Helping you <strong>select</strong> an Flux implementation</p>
 					<nav>
-						<a href="https://github.com/tastejs/todomvc/archive/master.zip" class="zocial red">Download</a>
-						<a href="https://github.com/tastejs/todomvc" class="zocial ltgray">View on GitHub</a>
-						<a href="http://blog.tastejs.com/" class="zocial ltgray">Blog</a>
+						<a href="https://github.com/todoflux/todoflux/archive/master.zip" class="zocial red">Download</a>
+						<a href="https://github.com/todoflux/todoflux" class="zocial ltgray">View on GitHub</a>
 					</nav>
 				</div>
 				<div class="col-md-4">
@@ -335,17 +334,13 @@
 			<hr>
 			<div class="row">
 				<div class="col-md-4">
-					<h2>New in 1.3</h2>
+					<h2>Initial release 1.0</h2>
 					<ul class="whats-new">
 						<li>We now have 64 applications.
-							<label class="link" for="news-expander">New since 1.3 ▼</label>
+							<label class="link" for="news-expander">Initial release 1.0</label>
 							<input type="checkbox" id="news-expander">
 							<ul class="collapsed" id="new-apps">
-								<li><a href="examples/angular-dart/web/">AngularDart</a></li>
-								<li><a href="examples/durandal/">Durandel</a></li>
-								<li><a href="examples/atmajs/">Atma.js</a></li>
-								<li><a href="examples/exoskeleton/">Exoskeleton</a></li>
-								<li><a href="examples/componentjs/">ComponentJS</a></li>
+								<li><a href="examples/flux-react/web/">Flux + React</a></li>
 							</ul>
 						</li>
 						<li>Updates have been made to apps including Vanilla, Angular, React, Backbone, Ember, jQuery &amp; many more.</li>
@@ -370,7 +365,25 @@
 			</div>
 			<hr>
 			<footer class="credit">
-				<p>Brought to you by
+				<p>
+					Brought to you by
+				</p>
+				<p>
+					<a href="https://github.com/addyosmani"><img src="http://gravatar.com/avatar/96270e4c3e5e9806cf7245475c00b275?s=80" width="40" height="40" alt="Addy Osmani">Addy</a>
+					<a href="https://github.com/sindresorhus"><img src="http://gravatar.com/avatar/d36a92237c75c5337c17b60d90686bf9.png?s=80" width="40" height="40" alt="Sindre Sorhus">Sindre</a>
+					<a href="https://github.com/passy"><img src="http://gravatar.com/avatar/be451fcdbf0e5ff07f23ed16cb5c90a3.png?s=80" width="40" height="40" alt="Pascal Hartig">Pascal</a>
+					<a href="https://github.com/stephenplusplus"><img src="http://gravatar.com/avatar/098cfe2d360e77c3229f2cd5298354c4?s=80" width="40" height="40" alt="Stephen Sawchuk">Stephen</a>
+					<a href="https://github.com/colineberhardt"><img src="http://gravatar.com/avatar/73bba00b41ff1c9ecc3ee29487bace7d?s=80" width="40" height="40" alt="Colin Eberhardt">Colin</a>
+					<a href="https://github.com/arthurvr"><img src="https://avatars1.githubusercontent.com/u/6025224?v=3&s=80" width="40" height="40" alt="Arthur Verschaeve">Arthur</a>
+					<a href="https://github.com/samccone"><img src="https://avatars0.githubusercontent.com/u/883126?v=3&s=80" width="40" height="40" alt="Sam Saccone">Sam</a>
+				</p>
+			</footer>
+			<hr>
+			<footer class="credit">
+				<p>
+					Special thanks to TodoMVC team
+				</p>
+				<p>
 					<a href="https://github.com/addyosmani"><img src="http://gravatar.com/avatar/96270e4c3e5e9806cf7245475c00b275?s=80" width="40" height="40" alt="Addy Osmani">Addy</a>
 					<a href="https://github.com/sindresorhus"><img src="http://gravatar.com/avatar/d36a92237c75c5337c17b60d90686bf9.png?s=80" width="40" height="40" alt="Sindre Sorhus">Sindre</a>
 					<a href="https://github.com/passy"><img src="http://gravatar.com/avatar/be451fcdbf0e5ff07f23ed16cb5c90a3.png?s=80" width="40" height="40" alt="Pascal Hartig">Pascal</a>
