--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<p>Backbone, Ember, AngularJS… the list of new and stable solutions continues to grow, but just how do you decide on which to use in a sea of so many options?</p>
 					<p>To help solve this problem, we created <a href="https://github.com/tastejs/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
 					<a href="https://twitter.com/todoflux" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
-					<a href="https://twitter.com/share" class="twitter-share-button" data-via="tastejs" data-url="http://todoflux.com" data-text="TodoFlux - Helping you select a Flux implementation - Todo apps for Redux, Fluxxor, Alt, Reflux and more"></a>
+					<a href="https://twitter.com/share" class="twitter-share-button" data-via="todoflux" data-url="http://todoflux.com" data-text="TodoFlux - Helping you select a Flux implementation: Todo apps for Redux, Fluxxor, Alt, Reflux and more"></a>
 					<div class="g-plusone" data-size="medium" data-annotation="none" data-href="http://todoflux.com"></div>
 				</div>
 				<div class="col-md-8">
