--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h2>Introduction</h2>
-					<p><a href="http://todomvc.com/"></a> has a great success across the community, helping the developers to choose an MVC framework that perfectly suits their project needs.</p>
+					<p><a href="http://todomvc.com/">TodoMVC</a> has a great success across the community, helping the developers to choose an MVC framework that perfectly suits their project needs.</p>
 					<p>Some time ago Facebook presented a new application paradigm for building client-side applications called <a href="https://facebook.github.io/flux/">Flux</a>. It gained a lot of attraction, and, as a result of it, dozens of frameworks and different Flux implementations came out.</p>
 					<p>Isn't it a perfect time to start <a href="https://github.com/tastejs/todomvc">TodoFlux</a> project to help the community to sort out all the things around Flux?</p>
 					<a href="https://twitter.com/todoflux" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
