Updating `index.html`

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>TodoFlux</title>
-		<meta name="description" content="Helping you select a Flux framework - Todo apps for Redux, Fluxxor, Alt, Reflux and more">
+		<meta name="description" content="Helping you select a Flux framework - Todo apps for Redux, Fluxible, Alt, Reflux and more">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:title" content="TodoFlux">
 		<meta name="twitter:site" content="@todoflux">
-		<meta name="twitter:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS and many more">
+		<meta name="twitter:description" content="Helping you select a Flux framework - Todo apps for Redux, Fluxible, Alt, Reflux and more">
 		<meta name="twitter:image" content="https://raw.githubusercontent.com/tastejs/todomvc/gh-pages/site-assets/screenshot.png">
 		<meta property="og:url" content="http://todoflux.com">
 		<meta property="og:title" content="TodoFlux">
 		<meta property="og:image" content="https://raw.github.com/tastejs/todomvc/gh-pages/site-assets/screenshot.png">
-		<meta property="og:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
+		<meta property="og:description" content="Helping you select a Flux framework - Todo apps for Redux, Fluxible, Alt, Reflux and more">
 		<link rel="shortcut icon" href="site-assets/favicon.ico">
 		<script src="bower_components/platform/platform.js"></script>
 		<!-- build:remove -->
@@ -47,8 +47,8 @@
 					<p><a href="http://todomvc.com/">TodoMVC</a> has a great success across the community, helping the developers to choose an MVC framework that perfectly suits their project needs.</p>
 					<p>Some time ago Facebook presented a new application paradigm for building client-side applications called <a href="https://facebook.github.io/flux/">Flux</a>. It gained a lot of attraction, and, as a result of it, dozens of frameworks and different Flux implementations came out.</p>
 					<p>Isn't it a perfect time to start <a href="https://github.com/tastejs/todomvc">TodoFlux</a> project to help the community to sort out all the things around Flux?</p>
-					<a href="https://twitter.com/todoflux" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
-					<a href="https://twitter.com/share" class="twitter-share-button" data-via="todoflux" data-url="http://todoflux.com" data-text="TodoFlux - Helping you select a Flux framework: Todo apps for Redux, Fluxxor, Alt, Reflux and more"></a>
+					<a href="https://twitter.com/todoflux" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>&nbsp;
+					<a href="https://twitter.com/share" class="twitter-share-button" data-via="todoflux" data-url="http://todoflux.com" data-text="TodoFlux - Helping you select a Flux framework: Todo apps for Redux, Fluxible, Alt, Reflux and more"></a>&nbsp;
 					<div class="g-plusone" data-size="medium" data-annotation="none" data-href="http://todoflux.com"></div>
 				</div>
 				<div class="col-md-8">
