--- a/examples/alt/index.html
+++ b/examples/alt/index.html
@@ -9,7 +9,7 @@
 		<!-- CSS overrides - remove if you don't need it -->
 		<link rel="stylesheet" href="css/app.css">
 	</head>
-	<body>
+	<body data-framework="alt">
 		<section class="todoapp" id="todoapp">
 			<header class="header">
 				<h1>todos</h1>
