Alt framework added to the list

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 					<h2>Examples</h2>
 					<hr>
 					<ul class="applist">
-
+						<li>
+							<a href="examples/alt/" data-source="http://alt.js.org" data-content="A library for managing data within JavaScript applications.">Alt</a>
+						</li>
 					</ul>
 					<hr>
 					<h2>Compare these to a non-framework implementation</h2>
@@ -104,7 +106,7 @@
 				<div class="col-md-4">
 					<h2>Getting Involved</h2>
 					<p>Is there a bug we haven't fixed or an Flux framework or implementation you feel would benefit from being included in TodoFlux?</p>
-					<p>If so, feel free to fork the repo, read our <a href="https://github.com/todoflux/todoflux/wiki">contribution guidelines</a>, and submit a pull request &mdash; we'll be happy to review it for inclusion.</p>
+					<p>If so, feel free to fork the repo, read our <a href="https://github.com/TodoFlux/todoflux/blob/master/contributing.md">contribution guidelines</a>, and submit a pull request &mdash; we'll be happy to review it for inclusion.</p>
 					<p>Make sure you use the <a href="https://github.com/todoflux/todoflux-app-template">template</a> as a starting point and read the <a href="https://github.com/todoflux/todoflux/blob/master/app-spec.md">app specification</a>.</p>
 					<p>
 						<a class="zocial small ltgray" href="https://github.com/tastejs/todoflux/wiki">Submit Pull Request &raquo;</a>
