Alt added to the release notes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 							<label class="link" for="news-expander">Initial release 1.0</label>
 							<input type="checkbox" id="news-expander">
 							<ul class="collapsed" id="new-apps">
-								<li><a href="examples/flux-react/web/">Flux + React</a></li>
+								<li><a href="examples/flux-react/">Flux + React</a></li>
+								<li><a href="examples/alt">Alt</a></li>
 							</ul>
 						</li>
 					</ul>
